# RapidScale

./: Cargo.toml  README.md
.cargo/: config.toml
captures/320sps/: Add.csv  NormalNoise.csv  Remove.csv  Stable.csv
src/: Filtering.rs  display.rs  main.rs  sampler.rs  stability.rs  types.rs
