[package]
name = "hello-world"
version = "0.2.0"
edition = "2024"
default-run = "hello-world"

[dependencies]
# Cortex-M 
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Panic Handler
panic-probe = { version = "1.0.0" }



# Embassy
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
] }
embassy-rp = { version = "0.9.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-usb = { version = "0.4.0" }

embassy-time = { version = "0.5.0" }
embassy-sync = { version = "0.6.0" }

embassy-embedded-hal = { version = "0.6.0" }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.7.0" }

embassy-usb-logger = "0.5.1"
log = "0.4"

variegated-nau7802 = "0.2.0"
libm = "0.2.11"

embedded-graphics = "0.8"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
mipidsi = "0.10.0"
heapless = "0.9.2"
profont = "0.7.0"

[profile.dev]
opt-level = 2
debug = true

[profile.dev.package.embedded-graphics]
opt-level = 3

[profile.dev.package.mipidsi]
opt-level = 3

[profile.dev.package.display-interface]
opt-level = 3

[profile.dev.package.display-interface-spi]
opt-level = 3
